2009-06-15  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Handle add/remove of favourite networks, and updates once a
	  commit/destroy is done.
	* common/nwamui_daemon.c: 
	  Add wifi_fav as a property, so that notify messages can be sent on
	  changes to the list. Also dispatch the wifi_fav_add/remove signals.
	  Ensure that wifi_fav list is sorted by priority, and catch
	  OBJECT_REFRESH/REMOVE messages for each wifi_net object in
	  favourites list.
	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c: 
	  Add nwamui_object_reload support to NwamuiWifiNet. Don't free a nwam
	  handle after a destroy, since it's already freed.

2009-06-15  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(condition_view_drag_data_get), (condition_view_drag_motion),
	(condition_view_drag_data_received),
	(capplet_tree_store_move_children), (handle_ncu_group_node),
	(on_button_clicked): DnD

2009-06-12  Darren Kenny  <darren.kenny@sun.com>

	* capplet/main.c: 
	  Fix use of options to launch correct thing.
	* capplet/nwam_wireless_dialog.h, capplet/nwam_wireless_dialog.c:
	  Change NCU to be an actual NwamuiNcu rather than string.
	  Change Transient property, to more correct name of "Persistant"
	  Add do_connect property, if TRUE, then on OK, it will call the
	  wifi_net_connect function.
	* common/libnwamui.c: 
	  Add error messages when get_gtk_builder() fails to load files.
	* common/nwamui_ncu.h, common/nwamui_ncu.c: 
	  Add nwamui_ncu_wifi_hash_* functions for managing the cache of wifi
	  objects which are allocated on a per-NCU basis.
	* common/nwamui_daemon.c: 
	  Change dispatch_scan_results_if_wireless() to use the per-NCU wifi
	  cache - avoids the multiple events for a network by combining them
	  in to one object.
	* common/nwamui_ncp.c, common/nwamui_ncp.h:
	  Remove unused SELECTION_MODE references.
	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c: 